# mtcnn.cvdnn

./: .gitignore  CMakeLists.txt  README.md  build.bat
models/: det1.fp16.caffemodel  det1.prototxt  det2.fp16.caffemodel  det2.prototxt  det3.caffemodel  det3.fp16.caffemodel  det3.prototxt  det4.fp16.caffemodel  det4.prototxt  fdet1.prototxt
models/fp32/: det1.caffemodel  det2.caffemodel  det4.caffemodel  fdet1.caffemodel
src/: CMakeLists.txt  converter.cpp  helper.h  main.cpp  mtcnn.cpp  mtcnn.h  tool.hpp
